 * IntaRNA/SeedHandler :
   * isFeasibleSeedBasePair() :
     + check for accessibility constraints
 * IntaRNA/HelixConstraint :
   + checkFullE & evalFullE() : whether or not to use full helix energy for 
     constraint checks or loop terms only
   - useNoED : replaced by checkFullE
 * IntaRNA/HelixHandler* :
   * adaptation to HelixConstraint::evalFullE()
 * bin/CommandLineParsing :
   + helixFullE : replaces helixNoED
   - helixNoED : replaced by helixFullE
 * README.md :
   + helixFullE documentation 

190304 Martin Raden + Frank Gelhausen :
 * API change: E_type now int (was float); all internally used energy values
   are now integer-encoded values in dcal/mol (instead of kcal/mol) as done
   within the VRNA package. this avoids floating point operation issues of the
   traceback routines.
   NOTE: this change will have minor impact on the reported interactions and
   their energies! Thus, results will not equal 2.* predictions!
 + IntaRNA::E_kcal_type = float to represent input/output energies in kcal/mol
 + IntaRNA::Z_type = float to represent partition functions, temperature and
   probabilities
 + type conversion routines for E_kcal_type, E_type, Z_type
 * 'outMaxE' value now exclusive concerning interaction reporting (all reporeted
   interactions have a lower energy)
 * IntaRNA/InteractionEnergyVrna :
   * replacing deprecated 'ViennaRNA::E_Stem(..)' with 'ViennaRNA::vrna_E_ext_stem(..)'
   + Evrna_2_E() to convert VRNA energy values to E_type
 * IntaRNA/NussinovHandler :
   + takes basePairEnergy for minimization (was maximization with hard coded +1 per bp)
 * IntaRNA/PredictorMaxProb :
   + updateOptima(energy) : was missing
 * IntaRNA/PredictorMfe :
   * updateOptima() :
     * now using Interaction::compareEnergy() instead of explicit energy comparison
   * reportOptima() :
     * energy check extended to be conform to Interaction::compareEnergy()
 * IntaRNA/PredictorsMfe2d*Seed :
   * early abortion check corrected