@@ -12,9 +12,9 @@ TEST_CASE( "HelixConstraint", "[HelixConstraint]" ) {
 	SECTION( "getter", "[HelixConstraint]" ) {
 
 		size_t minBP= 2, maxBP = 10, maxIL=2, maxED=0, maxE=0;
-		bool noED=false;
+		bool evaFullED=true;
 
-		HelixConstraint hC( minBP, maxBP, maxIL, maxED, maxE, noED);
+		HelixConstraint hC( minBP, maxBP, maxIL, maxED, maxE, evaFullED);
 
 		// check data access
 		REQUIRE( hC.getMinBasePairs() == 2 );
@@ -22,7 +22,7 @@ TEST_CASE( "HelixConstraint", "[HelixConstraint]" ) {
 		REQUIRE( hC.getMaxIL() == 2 );
 		REQUIRE( hC.getMaxED() == 0 );
 		REQUIRE( hC.getMaxE() == 0 );
-		REQUIRE( !hC.useNoED() );
+		REQUIRE( hC.evalFullE() == evaFullED );
 		REQUIRE( hC.getMaxLength1() == 28 );
 		REQUIRE( hC.getMaxLength2() == 28 );
 	}
